# simple-mpc

./: .gersemirc  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  dependencies.cmake  devel-git-deps.yaml  environment-devel.yaml  package.xml  pixi.toml
.github/workflows/: macos-linux-pixi.yml
benchmark/: CMakeLists.txt  go2.cpp  talos.cpp
bindings/: CMakeLists.txt  expose-arm-dynamics.cpp  expose-arm-mpc.cpp  expose-friction-compensation.cpp  expose-fulldynamics.cpp  expose-interpolate.cpp  expose-inverse-dynamics.cpp  expose-kinodynamics.cpp  expose-mpc.cpp  expose-problem.cpp  expose-robot-handler.cpp  module.cpp
examples/: bullet_robot.py  com.npy  franka.py  go2_fulldynamics.py  go2_fulldynamicsEasyMove.py  go2_fulldynamics_backlegs.py  go2_kinodynamics.py  plot_com.py  qptorques.npy  qptorques_easy.npy  talos_centroidal.py  talos_fulldynamics.py  talos_kinodynamics.py  test_plot.py  utils.py
include/simple-mpc/: arm-dynamics.hpp  arm-mpc.hpp  centroidal-dynamics.hpp  friction-compensation.hpp  fulldynamics.hpp  fwd.hpp  interpolator.hpp  interpolator.hxx  inverse-dynamics.hpp  kinodynamics.hpp  mpc.hpp  ocp-handler.hpp  robot-handler.hpp
include/simple-mpc/inverse-dynamics/: centroidal-id.hpp  centroidal.hpp  kinodynamics-id.hpp  kinodynamics.hpp
include/simple-mpc/python/: py-ocp-handler.hpp
src/: arm-dynamics.cpp  arm-mpc.cpp  centroidal-dynamics.cpp  friction-compensation.cpp  fulldynamics.cpp  interpolator.cpp  inverse-dynamics.cpp  kinodynamics.cpp  mpc.cpp  ocp-handler.cpp  robot-handler.cpp
src/inverse-dynamics/: centroidal-id.cpp  centroidal.cpp  kinodynamics-id.cpp  kinodynamics.cpp
tests/: CMakeLists.txt  friction.cpp  interpolator.cpp  inverse_dynamics.cpp  mpc.cpp  problem.cpp  qpsolvers.cpp  robot_handler.cpp  test_utils.cpp
tests/inverse-dynamics/: centroidal-id.cpp  centroidal.cpp  kinodynamics-id.cpp  kinodynamics.cpp
